# services/social-groups-service/src/main/java/net/firedevops/firemud/socialgroups/dto/FriendPresencePolicyViewDto.java
@@ -1,0 +1,3 @@
+package net.firedevops.firemud.socialgroups.dto;
+
+public record FriendPresencePolicyViewDto(FriendPresenceVisibilityPolicyValue currentPolicy) {}
